# TaskManagerAPI

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: asgi.py  db.sqlite3  exception_handler.py  middleware.py  urls.py  views.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
src/oauth/: apps.py  urls.py
src/oauth/v1/: serializers.py  validators.py  views.py
src/shared/: basemodel.py  email.py  logger.py
src/task/: models.py  urls.py
src/task/migrations/: 0001_initial.py  0002_initial.py
src/task/v1/: serializers.py  views.py
src/user/: models.py
src/user/migrations/: 0001_initial.py
